--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,33 +1,55 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context=".MainActivity"
+    android:orientation="vertical"
+    android:padding="10dp"
     >
 
 
   <com.github.glomadrian.codearealib.CodeArea
+      android:layout_marginTop="20dp"
       android:layout_width="wrap_content"
-      android:layout_height="50dp"
-      android:layout_alignParentTop="true"
-      android:layout_alignParentLeft="true"
-      android:layout_alignParentStart="true"
-      android:layout_marginTop="159dp"
-      android:layout_alignParentRight="true"
-      android:layout_alignParentEnd="true"
+      android:layout_height="wrap_content"
+      app:hint_text="Pairing code"
       android:id="@+id/view"
       />
 
-  <EditText
-      android:layout_width="200dp"
-      android:layout_height="50dp"
-      android:layout_below="@+id/view"
-      android:layout_alignParentLeft="true"
-      android:layout_alignParentStart="true"
-      android:layout_marginTop="76dp"
+  <com.github.glomadrian.codearealib.CodeArea
+      android:layout_marginTop="20dp"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      app:underline_color="#457ad1"
+      app:underline_selected_color="#9e1ace"
+      app:text_color="#b12eff"
+      app:hint_color="#77ce9d"
+      app:hint_text="Pin code"
+      app:codes="4"
       />
-</RelativeLayout>
+
+  <com.github.glomadrian.codearealib.CodeArea
+      android:layout_marginTop="20dp"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      app:underline_color="#d19385"
+      app:underline_selected_color="#ce3a47"
+      app:text_color="#5c282c"
+      app:hint_color="#ce1087"
+      app:hint_text="Cheat code"
+      app:codes="8"
+      />
+
+  <com.github.glomadrian.codearealib.CodeArea
+      android:layout_marginTop="20dp"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      app:underline_color="#03A9F4"
+      app:underline_selected_color="#3F51B5"
+      app:text_color="#212121"
+      app:hint_color="#03A9F4"
+      app:hint_text="Hash code"
+      app:codes="10"
+      />
+
+
+</LinearLayout>
