--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,7 +7,7 @@
     >
 
 
-  <com.github.glomadrian.codearealib.CodeArea
+  <com.github.glomadrian.codeinputlib.CodeInput
       android:layout_marginTop="20dp"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
@@ -15,7 +15,7 @@
       android:id="@+id/view"
       />
 
-  <com.github.glomadrian.codearealib.CodeArea
+  <com.github.glomadrian.codeinputlib.CodeInput
       android:layout_marginTop="20dp"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
@@ -27,7 +27,7 @@
       app:codes="4"
       />
 
-  <com.github.glomadrian.codearealib.CodeArea
+  <com.github.glomadrian.codeinputlib.CodeInput
       android:layout_marginTop="20dp"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
@@ -39,7 +39,7 @@
       app:codes="8"
       />
 
-  <com.github.glomadrian.codearealib.CodeArea
+  <com.github.glomadrian.codeinputlib.CodeInput
       android:layout_marginTop="20dp"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
